Bug 852665: add support for ICE disconnected state. r=bwc

MozReview-Commit-ID: 5ONTc2Wz72O